# demo

./: README.md  pyproject.toml
docs/: draw_ktuy.html  index.html
src/demo/: README.md  draw_ktuy.py
src/input/: ktuy05_exist.csv  magic_number_ktuy05.csv
